--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
+    <!-- Tesseract.js Configuration -->
+    <script src="%PUBLIC_URL%/tesseract-config.js"></script>
+    
     <title>DrugTox AI - Molecular Toxicity Prediction</title>
   </head>
   <body>
