--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
     <!-- Tesseract.js Configuration -->
     <script src="%PUBLIC_URL%/tesseract-config.js"></script>
     
-    <title>DrugTox AI - Molecular Toxicity Prediction</title>
+    <title>MedToXAi - Molecular Toxicity Prediction</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
